--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,20 @@
 {
+    "C_Cpp.default.compilerPath": "/usr/bin/g++",
     "files.associations": {
-        "iostream": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
-        "*.tcc": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
+        "cstdarg": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
+        "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
         "deque": "cpp",
@@ -29,6 +30,7 @@
         "numeric": "cpp",
         "optional": "cpp",
         "random": "cpp",
+        "ratio": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
@@ -36,28 +38,24 @@
         "utility": "cpp",
         "initializer_list": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
         "new": "cpp",
         "numbers": "cpp",
         "ostream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "typeinfo": "cpp",
-        "ctime": "cpp",
-        "ratio": "cpp",
         "semaphore": "cpp",
+        "stdexcept": "cpp",
         "stop_token": "cpp",
+        "streambuf": "cpp",
         "thread": "cpp",
-        "observer.h": "c",
-        "test3": "cpp",
-        "condition_variable": "cpp",
-        "mutex": "cpp",
-        "map": "cpp",
-        "database.h": "c",
-        "ride.h": "c",
-        "cstdarg": "cpp",
-        "user.h": "c"
-    },
-    "C_Cpp.default.compilerPath": "C:/msys64/ucrt64/bin/g++.exe"
+        "typeinfo": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "format": "cpp",
+        "iomanip": "cpp",
+        "span": "cpp",
+        "sstream": "cpp",
+        "variant": "cpp"
+    }
 }
