--- a/3 Machine Code/cab_booking_system/CMakeLists.txt
+++ b/3 Machine Code/cab_booking_system/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(BookMyShow)
+project(CabBookingSystem)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -11,4 +11,4 @@ include_directories(include)
 # Gather all source files
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
-add_executable(book_my_show ${SOURCES} main.cpp)
+add_executable(cab_booking_system ${SOURCES} main.cpp)
