first commit split wise

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,8 @@
         "mutex": "cpp",
         "unordered_set": "cpp",
         "queue": "cpp",
-        "location": "cpp"
+        "location": "cpp",
+        "bitset": "cpp",
+        "regex": "cpp"
     }
 }
